src/layout-components/Container/Container.css
.ui-container {
    padding: var(--spacing-sm) var(--spacing-md);
    background-color: var(--color-bg);
    font-size: var(--font-size);
    width: 100%;

    display: flex;
    flex-direction: column;
    gap: 1rem;
    justify-content: center;
    align-items: center;
}

.ui-container.direction-row {
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
}

.ui-container.non-centered {
    align-items: flex-start;
}

.ui-container.border-all {
    border-radius: var(--radius);
    border: 1px solid var(--color-border); 
}

.ui-container.border-left {
    border-left: 1px solid var(--color-border); 
}

.ui-container.border-right {
    border-right: 1px solid var(--color-border); 
}

.ui-container.border-top {
    border-top: 1px solid var(--color-border); 
}

.ui-container.border-bottom {
    border-bottom: 1px solid var(--color-border); 
}

.ui-container.border-none {
    border: none;
}

.ui-container.sticky {
    position: sticky;
    top: 0;
    z-index: 1000;
}

@media (max-width : 600px) {
    .ui-container.direction-row {
        flex-direction: column;
    }
}

